<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Android Trivia</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NameText">Evan Hsu</string>
    <string name="NickNameText">NickName</string>
    <string name="NameLabel">Name</string>
    <string name="AboutMe_Label">How About Me</string>
    <string name="Name_Text">Evan</string>
    <string name="AboutMe">
        ※ 把別人放心上，才能把自己放心上。
        \n 根據家扶統計，扶助家庭7成為單親、4成面臨重大疾病議題、7成家長具心理疾病，貧困家庭並非社會以為弱勢家庭只是「經濟弱勢」，家庭更面臨著精神疾病、醫療與重大事故等問題，造成經濟陷於困境無法輕易改善...。
        \n\n  ※ 從資訊角度認識世界、回饋社會！
        \n 從小喜愛與人聊天互動，發現每個人擁有獨特的個性與特質，而透過專注交流能更瞭解對方想法，讓團隊合作能更有效運作，我相信生活/工作中不會有故意破壞合作的人，因此帶領團隊時會更慎重說明願景並且分享每個人對團隊的期待與需求，相信只要願意尊重每個人並以人為本，跨屆合作就能發揮團隊最大產值！
        \n 於家扶工作的兩年中，我們探討著「何謂貧窮及所需」，在第一線時更發現貧困家庭的家長們總有不畏懼困難的堅毅勇氣，孩子純真說想長大照顧父母時令人心疼，他們鼓舞著我繼續為社會回饋付出，但過程中我發現傳統NGO面臨著數位轉型問題，包括RWD官網、募款App…等。而我平常關注著資訊領域的動態，在「人手一機」的社會環境底下，我深信透過軟體工程一定能改變社會環境，雖然隔行如隔山且中間肯定辛苦，但希望當有能力時回到社福/社企領域繼續完成使命「幫助多元族群」。

    </string>
    <string name="ProfileFrag">Profile</string>
</resources>
