<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.navigation.ProfileFragment">

    <ScrollView
        android:id="@+id/ProfileScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/Pading_num"
        android:paddingTop="@dimen/Pading_num"
        android:paddingRight="@dimen/Pading_num"
        android:paddingBottom="@dimen/Pading_num">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/profile_image"
                    app:layout_constraintBottom_toTopOf="@id/ProfileScroll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_Label"
                    style="@style/LabelSize"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/NameLabel"
                    app:layout_constraintEnd_toStartOf="@+id/NickName_Label"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileImage" />

                <TextView
                    android:id="@+id/NickName_Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NickNameText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/name_Label"
                    app:layout_constraintTop_toTopOf="@+id/name_Label"
                    style="@style/LabelSize"/>

                <TextView
                    android:id="@+id/Name_Text"
                    style="@style/TextSize"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/NameText"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_Label" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Name_Text"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/Name_Text"
                    app:layout_constraintTop_toTopOf="@+id/Name_Text" />

                <TextView
                    style="@style/LabelSize"
                    android:id="@+id/AboutMe_Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/AboutMe_Label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Name_Text" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/AboutMe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AboutMe_Label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>